added some methods

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>My web page</title>
+    <title>Notes App</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Notes App</h1>
+    <div id="main-container"></div>
+  </body>
+  <script src="bundle.js"></script>
 </html>
