added a button and text input on page to add note

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
   </head>
   <body>
     <h1>Notes App</h1>
-    <div id="main-container"></div>
+    <div id="main-container">
+
+      <input type="text" id="note-input" />
+      
+      <button id="add-note-button">Add note</button>
+
+    </div>
   </body>
   <script src="bundle.js"></script>
 </html>
