added error messages when server cannot be contacted

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Notes App</h1>
     <div id="main-container">
-
+      <div id="error_msg"></div>
       <input type="text" id="note-input" />
       
       <button id="add-note-button">Add note</button>
